--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^0.20.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.5",
     "expo": "~50.0.2",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
@@ -25,10 +28,13 @@
     "expo-web-browser": "~12.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-native": "0.73.2",
+    "react-native-expo-localstorage": "^1.0.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
